<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="today_s_total_expenses">TODAY\'S TOTAL EXPENSES</string>
    <string name="total_expenses">TOTAL EXPENSES</string>
    <string name="cat_general">General</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_food">Food</string>
    <string name="cat_health">Health</string>
    <string name="cat_household">Household</string>
    <string name="cat_hygiene">Hygiene</string>
    <string name="cat_pets">Pets</string>
    <string name="cat_presents">Presents</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_transportation">Transportation</string>


    <string name="pref_currency_title">Currency</string>
    <string name="pref_currency_default">INR</string>
    <string name="default_string">Default</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="enter_expense_amount">Enter Expense Amount</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="remarks">Remarks</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="save">SAVE</string>
    <string name="today_s_expenses">Today\'s Expenses</string>
    <string-array name="pref_currency_list_titles">
        <item>Indian Rupees</item>
        <item>US Dollar</item>
        <item>Euro</item>
        <item>British Pound</item>
        <item>Canadian Dollar</item>
        <item>Australian Dollar</item>
        <item>Ukrainian Hryvnia</item>
        <item>Russian Rouble</item>
    </string-array>
    <string-array name="pref_currency_list_values">
        <item>INR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>UAH</item>
        <item>RUB</item>
    </string-array>

    <!-- Predefined expense categories -->
    <string-array name="predefined_categories">
        <item>@string/cat_general</item>
        <item>@string/cat_clothes</item>
        <item>@string/cat_entertainment</item>
        <item>@string/cat_food</item>
        <item>@string/cat_health</item>
        <item>@string/cat_household</item>
        <item>@string/cat_hygiene</item>
        <item>@string/cat_pets</item>
        <item>@string/cat_presents</item>
        <item>@string/cat_sports</item>
        <item>@string/cat_transportation</item>
    </string-array>

</resources>
