<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/today_card_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/action_settings"
        app:titleTextColor="@android:color/white"/>


    <RelativeLayout
        android:id="@+id/expense_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/toolbar"
        android:background="@color/edit_title_color">

        <TextView
            android:id="@+id/txt_expense_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="5dp"
            android:text="@string/expense_amount"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/expense_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expense_title"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/txt_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:background="@drawable/edit_background"
            android:hint="@string/enter_expense_amount"
            android:textSize="13sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/expense_edit"
        android:background="@color/edit_title_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dp"
            android:paddingBottom="5dp"
            android:text="@string/category"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_title"
        android:background="@android:color/white">

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/category"
            android:editable="false"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edit_background"
            android:singleLine="true"
            android:hint="@string/select_category"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/remarks_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/edit_category"
        android:background="@color/edit_title_color">

        <TextView
            android:id="@+id/txt_remarks_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="5dp"
            android:text="@string/remarks"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/remarks_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remarks_title"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/txt_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_background"
            android:hint="@string/enter_remarks"
            android:textSize="13dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remarks_edit"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"/>


</RelativeLayout>